--- a/maps/index.html
+++ b/maps/index.html
@@ -70,10 +70,10 @@
   <strong>Type</strong>
   <div class='legend'>
     <ul>
-      <li><img src="http://hi.com/buoy-yellow.png"><label>Fixed Surface Buoy</label></li>
-      <li><img src="./img/shore_station-yellow.png"><label>Fixed Coastal Station</label></li>
-      <li><img src="./img/fixed.svg"><label>Fixed Bottom Station</label></li>
-      <li><img src="./img/tri-yellow.png"><label>Fixed Bottom Mount Mooring</label></li>
+      <li><img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/buoy-yellow.png"><label>Fixed Surface Buoy</label></li>
+      <li><img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/shore_station-yellow.png"><label>Fixed Coastal Station</label></li>
+      <li><img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/circ-yellow.png"><label>Fixed Bottom Station</label></li>
+      <li><img src="https://github.com/SECOORA/static_assets/blob/master/maps/img/tri-yellow.png"><label>Fixed Bottom Mount Mooring</label></li>
     </ul>
   </div>
 </div>
