Add hfradar, remove extra buoy file

--- a/maps/index.html
+++ b/maps/index.html
@@ -73,7 +73,8 @@
       <li><img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/buoy-yellow.png"><label>Fixed Surface Buoy</label></li>
       <li><img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/shore_station-yellow.png"><label>Fixed Coastal Station</label></li>
       <li><img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/circ-yellow.png"><label>Fixed Bottom Station</label></li>
-      <li><img src="https://github.com/SECOORA/static_assets/blob/master/maps/img/tri-yellow.png"><label>Fixed Bottom Mount Mooring</label></li>
+      <li><img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/tri-yellow.png"><label>Fixed Bottom Mount Mooring</label></li>
+      <li><img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/hfradar-yellow.png"><label>HFRadar Site</label></li>
     </ul>
   </div>
 </div>
