Use SECOORA API token

--- a/maps/index.html
+++ b/maps/index.html
@@ -84,7 +84,7 @@
 <div id='map' class='dark'></div>
 
 <script>
-  L.mapbox.accessToken = 'pk.eyJ1Ijoia3dpbGNveCIsImEiOiJmN2FmYWFhZTAzMWM4ZmI4Y2U0N2NhZjU5MDk3MmQxNyJ9.E8aJiVUNtkm3asS5DCOYJQ';
+  L.mapbox.accessToken = 'pk.eyJ1Ijoia3dpbGNveCIsImEiOiI1OTc4NWI4MTZhYTU5YjQzYzc2NDJiMTE5M2Y3MzMzMyJ9.TC1P6CJcFchG2GNAQtv0BQ';
 
   var map = L.mapbox.map('map', 'kwilcox.n7ilade3');
   var hash = L.hash(map);
