Move screenshot/download buttons to bottom left

--- a/maps/index.html
+++ b/maps/index.html
@@ -44,14 +44,14 @@
     }
 .snap-button {
   position:absolute;
-  top:10px;
-  right:10px;
+  bottom:40px;
+  left:10px;
   z-index:1000;
   }
 .down-button {
   position:absolute;
-  top:40px;
-  right:10px;
+  bottom:70px;
+  left:10px;
   z-index:1000;
   }
 </style>
