Relabel the legend

--- a/maps/index.html
+++ b/maps/index.html
@@ -59,15 +59,15 @@
 <!-- Set the display of this container to none so we can
      add it programmatically to `legendControl` -->
 <div id='legend' style='display:none;'>
-  <strong>Status</strong>
+  <strong>Asset Status</strong>
   <div class='legend'>
     <ul>
-      <li><span style='background:#6bce70;'></span><label>Operational</label></li>
+      <li><span style='background:#6bce70;'></span><label>Existing</label></li>
       <li><span style='background:#fdf341;'></span><label>Permitting/Construction</label></li>
-      <li><span style='background:#fc7b42;'></span><label>Planned</label></li>
+      <li><span style='background:#fc7b42;'></span><label>Proposed</label></li>
     </ul>
   </div>
-  <strong>Type</strong>
+  <strong>Asset Type</strong>
   <div class='legend'>
     <ul>
       <li><img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/buoy-gray.png"><label>Fixed Surface Buoy</label></li>
