Add compass rose

--- a/maps/index.html
+++ b/maps/index.html
@@ -15,6 +15,11 @@
 </head>
 <body>
 <style>
+#rose {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
 .legend ul {
     margin: 0;
     padding: 0;
@@ -77,6 +82,10 @@
       <li><img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/tri-gray.png"><label>Fixed Bottom Mount Mooring</label></li>
     </ul>
   </div>
+</div>
+
+<div id='rose'>
+  <img src="https://raw.githubusercontent.com/SECOORA/static_assets/master/maps/img/rose.png">
 </div>
 
 <button id='snap' class='snap-button'>Snapshot</button>
